--- a/templates/easy_admin/Server/data.html.twig
+++ b/templates/easy_admin/Server/data.html.twig
@@ -5,5 +5,5 @@
 		{% endif %}
 	{% endfor %}
 {% elseif view == 'show' %}
-	{{ dump(value) }}
+	<pre style="max-height: 20em">{{ value|json_encode(constant('JSON_PRETTY_PRINT')) }}</pre>
 {% endif %}
